--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "Quill.js module that converts markdown to rich text formatting while typing. ",
   "main": "markdownShortcuts.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Patrick Lee",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^3.5.4"
   }
 }
