--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quill-markdown-shortcuts",
   "version": "0.0.4",
   "description": "Quill.js module that converts markdown to rich text formatting while typing. ",
-  "main": "markdownShortcuts.js",
+  "main": "dist/markdownShortcuts.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
