--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/markdownShortcuts.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "build:moduleExample": "webpack --config ./docs/module/webpack.config.js "
   },
   "author": "Patrick Lee",
   "license": "MIT",
-  "peerDependencies": {
-    "quill": "^1.0.0"
+  "dependencies": {
+    "quill": "^1.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
