--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:module && npm run build:moduleExample",
     "build:module": "webpack",
-    "build:moduleExample": "webpack --config ./docs/module/webpack.config.js "
+    "build:moduleExample": "webpack --config ./docs/module/webpack.config.js ",
+    "serve": "node web_server.js"
   },
   "author": "Patrick Lee",
   "license": "MIT",
   "dependencies": {
-    "quill": "^1.3.5"
+    "quill": "^1.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "live-server": "^1.2.2",
     "webpack": "^3.10.0"
   }
 }
